--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="./img/favicon.png" />
 
     <script src="lib/react.development.js"></script>
     <script src="lib/react-dom.development.js"></script>
     <script src="lib/react-router-dom.min.js"></script>
 
     <link rel="stylesheet" href="css/main.css">
-         <title>Document</title>
+         <title>Appsus</title>
 </head>
 
 <body>
