--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="lib/react-router-dom.min.js"></script>
 
     <link rel="stylesheet" href="css/main.css">
-         <title>Appsus</title>
+         <title>KeepApp</title>
 </head>
 
 <body>
